# flask-training-web

./: README.md  main.py  pyproject.toml
instance/: database.db
website/: __init__.py  auth.py  models.py  views.py
website/static/: index.js
website/templates/: base.html  finger_training.html  home.html  login.html  nav.html  sign_up.html
website/views/: auth.py  finger_training.py  home.py
