[tool.poetry]
name = "flask_practice"
version = "0.1.0"
description = ""
authors = ["Seraphine_Tsui <chi811008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
